# axiom-fabric

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  brief.md  build.md  plan.md  pyproject.toml
.github/workflows/: workflow.yml
axiom-fabric/: README.md  alembic.ini  pyproject.toml
axiom-fabric-dashboard/: README.md  pyproject.toml
axiom-fabric-dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.ts
axiom-fabric-dashboard/frontend/src/: App.tsx  VersionPanel.tsx  api.ts  layout.ts  main.tsx  styles.css  types.ts
axiom-fabric-dashboard/frontend/src/nodes/: FactNode.tsx  LayerGroupNode.tsx
axiom-fabric-dashboard/src/axiom_fabric_dashboard/: __init__.py  _version.py  app.py  cli.py  schemas.py  server.py
axiom-fabric-dashboard/tests/: conftest.py  test_api.py
axiom-fabric/src/axiom_fabric/: _version.py  cli.py  config.py  cost.py  db.py  facts.py  graph.py  layers.py  migrate.py  models.py  sources.py
axiom-fabric/src/axiom_fabric/mcp/: __init__.py  __main__.py  agent_guide.md  cli.py  guide.py  install.py  serializers.py  server.py
axiom-fabric/src/axiom_fabric/migrations/: env.py
axiom-fabric/src/axiom_fabric/migrations/versions/: 2b53e2588f3e_initial_schema_layers_facts_fact_.py  b1f5a7c8d9e0_phase_1_5_layer_versions_and_edges.py  c3a9f1d2e4b5_staleness_and_fact_sources.py
axiom-fabric/tests/: conftest.py  test_cli_extras.py  test_cli_facts.py  test_cli_init.py  test_cost.py  test_graph.py  test_mcp_autoinit.py  test_mcp_gating.py  test_mcp_install.py  test_mcp_tools.py  test_phase_1_5.py  test_sources.py
scripts/: seed_demo_data.sh
skills/: README.md
skills/claude/: SKILL.md
skills/codex/: AGENTS.md
skills/gemini/: GEMINI.md
src/axiom_fabric/: cli.py  config.py  db.py  layers.py  models.py
