# Workspace root for the axiom-fabric monorepo.
# This is a *virtual* root (no [project] of its own) — it only ties the member
# packages together and holds shared dev tooling. The publishable packages are:
#   - axiom-fabric            (core + cli + mcp)
#   - axiom-fabric-dashboard  (web UI; depends on axiom-fabric)

[tool.uv.workspace]
members = ["axiom-fabric", "axiom-fabric-dashboard"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["axiom-fabric/src", "axiom-fabric/tests", "axiom-fabric-dashboard/src"]
extend-exclude = ["axiom-fabric/src/axiom_fabric/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["axiom-fabric/tests"]
addopts = "-ra"
