[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axiom-fabric"
dynamic = ["version"]
description = "The Versioned Truth Layer for Agentic AI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "adaptivemake" }]
dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.13,<2.0",
    "typer>=0.12,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.39,<1.0",
    "openai>=1.40,<2.0",
]
mcp = [
    "mcp>=1.9,<2.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.6,<1.0",
]

[project.scripts]
af = "axiom_fabric.cli:app"
af-mcp = "axiom_fabric.mcp.cli:main"

[tool.hatch.version]
# Version is computed from git at build time: "0.2.<commit-count>".
# See src/axiom_fabric/_version.py for the rule and the no-git failure mode.
source = "code"
path = "src/axiom_fabric/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/axiom_fabric"]
