[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axiom-fabric"
dynamic = ["version"]
description = "The governance ledger for agentic AI — versioned truth with provenance, trust weights, and append-only audit history."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "adaptivemake" }]
dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.13,<2.0",
    "typer>=0.12,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "pyyaml>=6.0,<7.0",
    # Axiom Fabric is built to be driven by AI agents over MCP, so the MCP server
    # (`af-mcp`) is part of the default install rather than an opt-in extra.
    "mcp>=1.9,<2.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.39,<1.0",
    "openai>=1.40,<2.0",
]
# Retained as a no-op for backward compatibility: `mcp` is now a core dependency,
# so `pip install "axiom-fabric[mcp]"` still resolves and installs the same thing.
mcp = []
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.6,<1.0",
]

[project.scripts]
af = "axiom_fabric.cli:app"
af-mcp = "axiom_fabric.mcp.cli:main"

[tool.hatch.version]
# Version is computed from git at build time: "0.3.<commit-count>".
# See src/axiom_fabric/_version.py for the rule and the no-git failure mode.
source = "code"
path = "src/axiom_fabric/_version.py"

[tool.hatch.build]
# Must ship in the package regardless of any gitignore rules (hatchling skips
# VCS-ignored files): read_agent_guide() serves this as the MCP
# `axiom_fabric_usage` prompt and as the source for `af-mcp install --with-skill`.
artifacts = ["src/axiom_fabric/mcp/agent_guide.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/axiom_fabric"]
